--- a/Index.html
+++ b/Index.html
@@ -108,13 +108,13 @@
 <body>
 
     <audio id="bgMusic" loop>
-        <source src="audio/valen.mp3" type="audio/mpeg">
+        <source src="Audio/Valen.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
 
     <div class="container">
         <h1 id="valentineText">💖 Selamat Hari Valentine Manis! 💖</h1>
-        <img src="img/bila.jpg" alt="Cute Cartoon">
+        <img src="img/Bila.jpg" alt="Cute Cartoon">
         <p>Apakah kamu siap untuk menjadi cintaku selamanya? 😘</p>
         
         <!-- Tombol Play dan Stop Music -->
